--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@hookform/resolvers": "^3.9.0",
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.44.4",
+    "date-fns": "3.6.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-time-picker": "^7.0.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.4"
   },
