--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.44.4",
+    "clsx": "2.1.1",
     "date-fns": "3.6.0",
     "next": "14.2.5",
     "react": "^18",
